# Energy-Copilot-Platform-

./: .dockerignore  .gitattributes  .gitignore  CLAUDE.md  EnergyLens_Dashboard_Master_Guide.docx  EnergyLens_Dashboard_Master_Guide_EN.docx  LinkedIn_Post_Draft.md  README.md  TRIAL-PERIOD-CHECKLIST.md
docs/: EnergyLens_Finalization_Plan_and_Working_Reference.md  FABRIC_ACTION_CHECKLIST_v2.md  dashboard_final_10page_plan.md  fabric-reconciliation-2026-06-15.md  fabric-sync.md  ghg_methodology.md  page5_v54_visual_plan.md  page5_v55_headcount_fix_guide.md  page9_v56_master_design.md  page9_v56_validation_checklist.md  pipeline-setup-guide-notebooks-9-10-11.md  (+2 more)
scripts/freelance_bot/: .gitignore  README.md  pyproject.toml
scripts/freelance_bot/config/: filters.yml  personal.yml  sources.yml
scripts/freelance_bot/config/templates/: client_brief.md  example_csrd.md  example_fabric_audit.md  example_hourly.md  example_kpi.md  job_cover_letter.md  proposal_master.md
scripts/freelance_bot/data/: jobs.db
scripts/freelance_bot/src/: __init__.py  main.py
scripts/freelance_bot/src/enrich/: __init__.py  client_brief.py  proposal.py
scripts/freelance_bot/src/filter/: __init__.py  budget.py  keyword.py  llm_score.py
scripts/freelance_bot/src/llm/: __init__.py  gemini.py
scripts/freelance_bot/src/notify/: __init__.py  telegram.py
scripts/freelance_bot/src/sources/: __init__.py  base.py  email_imap.py  json_api.py  rss.py
scripts/freelance_bot/src/storage/: __init__.py  db.py  models.py
scripts/freelance_bot/tests/: test_filter.py  test_storage.py
(+1159 files in other folders)
